--- a/index.html
+++ b/index.html
@@ -133,15 +133,13 @@
 				<p>but...</p>
 				<p>don't worry</p>
 				<p>because...</p>
-				<p>God has your back</p>
-				<p>and</p>
+				<p>God has your back and</p>
 				<p>this year will be better</p>
 				<p>and I hope</p>
 				<p>you'll find...</p>
 				<p>happiness along the way</p>
 				<p>keep your spirit up</p>
-				<p>enjoy every single moment...</p>
-				<p>that you experience today</p>
+				<p>enjoy every single moment... that you experience today</p>
 				<p>fill it with your most beautiful smile</p>
 				<p>and make it the best memory..</p>
 				<p>lastly...</p>
